# eHaz-Game-Engine

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: Application.cpp.111D4B6652285F19.idx  Application.hpp.C29702C2F4CDDB28.idx  AssetSystem.cpp.BD5B12E6A61270BE.idx  Components.cpp.58F600DA837B19EA.idx  Components.hpp.62B0417F435201F0.idx  EditorLayer.cpp.9B8DFD4B17840EDB.idx  EditorLayer.hpp.EF00E07C31599739.idx  EnTT_Helpers.cpp.5E90792F64D9C7C9.idx  EnTT_Helpers.hpp.3C6BEAD3DE6EA5F0.idx  Event.hpp.631A731864FBD8CD.idx  EventQueue.hpp.6891B94BB267E1DF.idx  GameObject.cpp.D66FD8499B121516.idx  GameObject.hpp.1248842861FCF7FE.idx  InputSystem.cpp.4F2ADF18837FF8DC.idx  InputSystem.hpp.4DD7CADAB4FB4AC4.idx  KeyCodes.hpp.5FE02288CE76EF1B.idx  Layer.hpp.A99A63A75D3D4A87.idx  LayerStack.hpp.89DE0092F47D6C42.idx  MouseCodes.hpp.08D04BFB8D060D69.idx  Octtree.cpp.6BB2F0C86EC6AED4.idx  Physics.hpp.A02C7B675CC7255C.idx  Scene-graph.cpp.AAAA9D26EADF2080.idx  Scene-graph.hpp.B4DD0A2571196D7F.idx  Scene.cpp.D58EB3E2EAE1F026.idx  Scene.hpp.6196869A79726306.idx  Serialization_Macros.cpp.47869D90876C2B1D.idx  Serialization_Macros.hpp.7EF9A06E7A820043.idx  camera.hpp.BDEDACF2F5C42F55.idx  imconfig.h.39574E219CB68314.idx  imconfig.h.C058FA6B54EAF5E3.idx  imgui.cpp.8B2F5D9CED00B332.idx  imgui.h.62C242F45358D5AB.idx  imgui.h.CFEAB41E57E6CB2A.idx  imgui_demo.cpp.2A8515E4551C3996.idx  imgui_draw.cpp.867055766014209A.idx  imgui_impl_opengl3.cpp.739D7FCCFF3D0C20.idx  imgui_impl_opengl3.h.A965A6BDE2D4F01C.idx  imgui_impl_opengl3.h.B68D12594C41C5E3.idx  imgui_impl_opengl3.h.BD3EDB1A258D7C00.idx  imgui_impl_opengl3_loader.h.E58B76AB3CCD9C63.idx  (+12 more)
Engine/: CMakeLists.txt
Engine/dependencies/sol/: config.hpp  forward.hpp  sol.hpp
Engine/include/Core/: Application.hpp  Event.hpp  EventQueue.hpp  Layer.hpp  LayerStack.hpp  eHaz.hpp
Engine/include/Core/AssetSystem/: Asset.hpp  AssetSystem.hpp
Engine/include/Core/Input/: InputSystem.hpp  KeyCodes.hpp  MouseCodes.hpp  ScanCodes.hpp
Engine/include/Physics/: JoltImplementations.hpp  JoltInclude.hpp  Jolt_DataStructures.hpp  Physics.hpp  Physics_Debug_Drawer.hpp
Engine/include/Scene/: CSM.hpp  Components.hpp  GI_Manager.hpp  GameObject.hpp  Octree.hpp  Scene-graph.hpp  Scene.hpp
Engine/include/Scene/Lighting/: Lighting_DataStructures.hpp
Engine/include/Scripting/: Script_Fields.hpp  Scripting_Engine.hpp  Scripting_InputSystem_Bindings.hpp  Scripting_Keycode_Bindings.hpp  Scripting_Physics_Bindings.hpp
Engine/include/UI/: EditorLayer.hpp
Engine/include/Utility/: DataStructures.hpp  Iteration.hpp  Jolt_Helpers.hpp  OS_Dialogues.hpp  Serialization_Macros.hpp  SpecParser.hpp
Engine/src/Core/: Application.cpp  AssetSystem.cpp  EventQueue.cpp
Engine/src/Input/: InputSystem.cpp
Engine/src/Physics/: Physics.cpp  Physics_Debug_Drawer.cpp
Engine/src/Scene/: Components.cpp  GI_Manager.cpp  Octree.cpp  Scene-graph.cpp  Scene.cpp
Engine/src/Scripting/: Scripting_Engine.cpp
Engine/src/UI/: ContentBrowser.cpp  EditorLayer.cpp
Engine/src/Utility/: OS_Dialogues.cpp  Serialization_Macros.cpp  SpecParser.cpp
SandBox/: CMakeLists.txt
SandBox/assets/: Boombox model liscense.txt  animation.vert  big_me_spec.json  building_01.glb  building_01_hullglb.glb  default_shader.json  imgui.ini  missing_mat.json  new_test_spec.json  pbr_test.scene  phys_test.scene  script_scene.scene  shader.frag  shader.vert  skybox.glb  temp.scene  test.scene  walls.glb
SandBox/assets/Default shapes/: sphere.glb
SandBox/assets/Engine/Materials/Missing/: missing_mat.json
SandBox/assets/Engine/Models/: error_model.glb  skydome_forces.glb  sunset_heights_skydome_side1.glb  sunset_heights_skydome_side2.glb  sunset_heights_skydome_top.glb
SandBox/assets/Engine/Shaders/: HDR_Shader_spec.json  HDR_shader.frag  HDR_shader.vert  SkyDome_shader.frag  SkyDome_shader.vert  SkyDome_shader_spec.json  Skybox_shader.frag  Skybox_shader.vert  Skybox_shader_spec.json  Tone_Shader_spec.json  Tone_shader.frag  Tone_shader.vert
SandBox/assets/Engine/Shaders/CSM/: CSM_shader.frag  CSM_shader.geom  CSM_shader.vert  CSM_shader_spec.json
SandBox/assets/MultiImportTest/: Cube.001_mat.json  Cube.002_mat.json  Cube.003_mat.json  Cube.004_mat.json  Cube.005_mat.json  Cube.006_mat.json  Cube.007_mat.json  Cube.010_mat.json  Cube.011_mat.json  irradiance_probes.json  irradience_test.gltf
SandBox/assets/hdr_test/: w3_sky_cloud503_ems.hdr
SandBox/assets/hdr_test/materials/: cloud501.mat  cloud502.mat  cloud503_top.mat
SandBox/assets/physics debugging/: scene.scene
SandBox/assets/scripts/: .luarc.json  engine_defs.lua  engine_keycode_defs.lua  test.lua
SandBox/assets/scripts/user_source/: test.lua
SandBox/assets/test/: SH-8.glb  hdsahdsh.json  pbr_scene.scene  pbr_test.json  physics_scene.scene
SandBox/assets/test/grass pbr/: grass_mat.json
SandBox/assets/test/test_pbr/: spec.json
SandBox/include/: camera.hpp
SandBox/src/: main.cpp
